--- a/admin/css/basic.css
+++ b/admin/css/basic.css
@@ -124,3 +124,11 @@ pre code {
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
           box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
+
+.before{
+  content:'';
+  display: block;
+  position: absolute;
+  top: 0;left: 0;bottom: 0;
+  width: 100%;background: #474747;z-index: -1;
+}
