--- a/admin/css/admin-common.css
+++ b/admin/css/admin-common.css
@@ -1,10 +1,14 @@
 .root{
 	width: 100%;
+	position: relative;z-index: 0;
+	background: #e9e9e9;
 	text-align: center;
 }
 .root-in{
 	margin: 0 auto;
 	width: 1400px;
+	border: 1px solid #dbdbdb;
+	border-top: 0 none;
 	overflow: hidden;
 }
 .cols{
@@ -33,9 +37,11 @@
 	position: relative;left: 0;top: 0;z-index: 0;
 	float: left;
 	width: 1222px;
+	background: #fff;
 }
 .gnb{
 	margin-top: 70px;
+	background: #474747;
 }
 .gnb a{
 	display: block;
@@ -80,6 +86,7 @@
 }
 .content-row{
 	padding: 40px 37px;
+	overflow: hidden;
 }
 
 .content-row h4{
@@ -91,25 +98,115 @@
 	content:'|';
 	padding-right: 14px;
 }
-.content-row table th{
+.content-row th{
 	height: 20px;
 	background: #939393;color: #fff;
 	font: normal normal 14px/24px Arial, Helvetica, sans-serif;
 }
-.content-row table td{
+.content-row td{
 	padding: 13px 0 7px;
 	text-align: center;color: #000;
 }
-.content-row table td:first-child{
+.content-row td:first-child{
 	color: #000;font-weight: bold;
 }
-.content-row table td:first-child + td{
-	/*text-align: left;*/
+.content-row td.item-tit{
+	padding-left: 50px;
 }
-.content-row table tbody tr{
+.content-row tbody tr{
 	border-bottom: 1px solid #d0d0d0;
 }
+.content-row a:hover{
+	text-decoration: underline;
+}
+.write-link{
+	float: right;
+	margin-bottom: 15px;margin-right: 30px;
+	font-size: 16px;
+}
+.btn-remove{
+	float: left;
+	padding: 0 10px;
+	color: #fff;font-size: 14px;font-weight: bold;
+	background-color: #d9534f;
+	border-color: #d43f3a;
+	border-radius: 5px;
+}
+.btn-remove:hover{
+	color: #fff;
+	background-color: #d2322d;
+	border-color: #ac2925;
+}
 
+.nse-form label{
+	display: block;
+	margin-bottom: 10px;
+}
+.nse-form input[type='text']{
+	width: 786px;
+	display: block;
+	padding: 5px 10px;
+	border: 1px solid #B5B5B5;
+	content: #000;
+
+}
 .edit-post{
-	width: 660px;
+	width: 800px;
+	height: 600px;
+}
+.submit-lbl{
+	display: block;
+	width: 800px;
+	text-align: center;
+}
+.edit-submit{
+	display: block;
+	margin: 15px auto 0;
+	width: 250px;height: 40px;
+	background-color: #5cb85c;
+	border-color: #4cae4c;
+	border-radius: 5px;
+	border: 0 none;color: #fff;font-weight: bold;font-size: 16px;
+	cursor: pointer;
+}
+.edit-submit:hover{
+	background-color: #47a447;
+	border-color: #398439;
+}
+
+/*board : faq, notice, news*/
+.pagination{
+	clear: both;
+	margin-top: 30px;padding: 5px 0;
+	overflow: hidden;
+	text-align: center;
+}
+.pagination a{
+	display: inline-block;
+	padding: 5px 10px;
+	font-size: 16px;
+}
+.pagination a:hover{
+	text-decoration: underline;
+}
+.pagination a.current{
+	font-size: 18px;font-weight: bold;
+	text-decoration: underline;color: green;
+}
+.pagination .btn-icon{
+	width: 10px;height: 20px;
+	background: url(../img/ir_icon.png) no-repeat;
+	text-indent: -8888px;
+}
+.pagination .prev10{
+	background-position:-210px 0;
+}
+.pagination .prev{
+	background-position:-170px 0;
+}
+.pagination .next{
+	background-position:-90px -20px;
+}
+.pagination .next10{
+	background-position:-130px -20px
 }
