--- a/admin/css/basic.css
+++ b/admin/css/basic.css
@@ -11,7 +11,7 @@ em, address{font-style: normal;}
 
 a:link{text-decoration: none;color: #666;}
 a:visited{text-decoration: none;color: #666;}
-a:hover{text-decoration: none;color: #666;}
+/*a:hover{text-decoration: none;color: #666;}*/
 a:active{text-decoration: none;color: #666;}
 
 pre {
