--- a/admin/css/admin-common.css
+++ b/admin/css/admin-common.css
@@ -36,8 +36,10 @@
 .col-2{
 	position: relative;left: 0;top: 0;z-index: 0;
 	float: left;
-	width: 1222px;
+	padding-bottom: 100px;
+	width: 1222px;min-height: 800px;
 	background: #fff;
+	
 }
 .gnb{
 	margin-top: 70px;
@@ -72,9 +74,6 @@
 }
 
 /* overview */
-.col-2{
-	padding-bottom: 100px;
-}
 .content-head{
 	padding: 30px 0 0 52px ;
 	height: 110px;
@@ -84,11 +83,21 @@
 .content-head h2{
 	padding-bottom: 10px;
 }
-.content-row{
-	padding: 40px 37px;
+.content-row-group{
+	padding: 60px 52px;
 	overflow: hidden;
 }
-
+.content-row{
+	margin-bottom: 40px;
+	overflow: hidden;
+}
+.content-row:first-child{
+	margin-bottom: 80px;
+}
+.content-foot{
+	padding: 60px 52px;
+	overflow: hidden;
+}
 .content-row h4{
 	margin-bottom: 14px;
 	text-align: left;
@@ -124,6 +133,11 @@
 	margin-bottom: 15px;margin-right: 30px;
 	font-size: 16px;
 }
+.content-foot .btn{
+	float: none;
+	padding: 5px 10px;
+	border-radius: 5px;color: #fff;
+}
 .btn-remove{
 	float: left;
 	padding: 0 10px;
@@ -137,7 +151,23 @@
 	background-color: #d2322d;
 	border-color: #ac2925;
 }
-
+.btn-edit{
+	background-color: #428bca;
+	border-color: #357ebd;
+}
+.btn-edit:hover{
+	color: #fff;
+	background-color: #3276b1;
+	border-color: #285e8e;
+}
+.btn-go-list{
+	background-color: #5bc0de;
+	border-color: #46b8da;
+}
+.btn-go-list:hover{
+	background-color: #39b3d7;
+	border-color: #269abc;
+}
 .nse-form label{
 	display: block;
 	margin-bottom: 10px;
@@ -175,6 +205,17 @@
 }
 
 /*board : faq, notice, news*/
+.content-row h3{
+	float: left;
+	font-size: 26px;
+}
+.content-row .date-box{
+	float: right;
+	margin-top: 10px;
+}
+.view .content-row{
+	text-align: left;
+}
 .pagination{
 	clear: both;
 	margin-top: 30px;padding: 5px 0;
