--- a/css/common.css
+++ b/css/common.css
@@ -12,12 +12,29 @@ body{
 
 /*------------    Head    ------------*/
 .head{
-	border-top: 1px solid #dbdbdb;
+	border-bottom: 3px solid #d3cfcf;
 }
 .head-top{
 	position: relative;z-index: 10;
-	height: 64px;
-	padding: 24px 0;
+	
+}
+@media(min-width: 640px){
+	.head-top{
+		height: 56px;
+		padding: 21px 0 0 0;
+	}
+}
+@media(min-width: 998px){
+	.head-top{
+		height: 64px;
+		padding: 56px 0 24px;
+	}
+}
+@media(min-width: 1054px){
+	.head-top{
+		height: 64px;
+		padding: 56px 0 24px;
+	}
 }
 .head-top .gutter{
 	position: relative;
@@ -25,14 +42,21 @@ body{
 h1{
 	float: left;
 	margin-left: 52px;
-	width:146px;height:63px;
-	background: url(../img/main/ir_icon.png) no-repeat;
-	background-position:0 -80px;
+	width:106px;height:46px;
+	background: url(../img/main/ir_icon.png) no-repeat -10px -60px;
 	text-indent: -9999px;
+}
+.btn-book{
+	display: block;
+	float: right;
+	width:31px;height:31px;margin-top: 5px;
+	background: url(../img/main/ir_icon.png) no-repeat -180px -100px;
+	text-indent: -9999px;
+	border: 0 none;
 }
 .select-lang{
 	float: right;
-	width: 56px;
+	width: 56px;margin-top: -20px;
 	overflow: hidden;
 }
 .select-lang a{
@@ -48,7 +72,7 @@ h1{
 	background-position:-120px 0
 }
 .head .menu-box{
-	position: absolute;left: 0;top: 30px;
+	position: absolute;left: -1px;top: 32px;
 	width: 100%;overflow: hidden;
 }
 .gnb{
@@ -58,7 +82,7 @@ h1{
 .menu-bg.active:after{
 	content: '';
 	position: absolute;
-	top: 60px;left: 0;bottom: 0;z-index: -1;
+	top: 56px;left: 0;bottom: 0;z-index: -1;
 	width: 100%;
 	background: #787776;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
@@ -69,13 +93,12 @@ h1{
 }
 .dep1{
 	display: block;
-	padding: 10px 10px 24px;
+	padding: 10px 24px 24px;
 	text-align: center;
-	font-family: 'wHYGothic_A1_200';font-size: 22px;color: #3f3f3f;
+	font-family: 'wHYGothic_A1_200';font-size: 18px;color: #3f3f3f;
 }
 .dep1-row{
 	float: left;
-	width: 182px;
 	text-align: center;
 }
 .dep2-group{
@@ -97,7 +120,7 @@ a.dep2{
 	display: block;
 	padding: 8px 0px;
 	text-align: center;
-	font-family: 'wHYGothic_A1_300';font-size: 18px;color: #fff;
+	font-family: 'wHYGothic_A1_300';font-size: 15px;color: #fff;
 }
 a.dep2:hover{
 	text-decoration: underline;
@@ -105,35 +128,45 @@ a.dep2:hover{
 
 @media(min-width: 320px){
 	.gutter{
-
+		width: 100%
 	}
 }
 @media(min-width: 640px){
-	.gutter{
-
+	h1{
+		margin-left: 32px;
+		width:95px;height:41px;
+		background-position:-10px -120px
+	}
+	.btn-book{
+		margin-right: 32px;
+		cursor: pointer;
 	}
 }
 @media(min-width: 998px){
 	.gutter{
-
+		/*width: 100%*/
+	}
+	h1{
+		margin-left: 52px;
+		width:106px;height:46px;
+		background-position: -10px -60px;
 	}
 
 }
-@media(min-width: 1280px){
+@media(min-width: 1054px){
 	.gutter{
-
+		width: 1024px;
 	}
-}
-@media(min-width: 1600px){
-	.gutter{
-		width: 1600px;
+	h1{
+		margin-left: 52px;
+		width:106px;height:46px;
+		background-position: -10px -60px;
 	}
 }
 
 /*------------    Body    ------------*/
 .body{
 	clear: both;
-	padding-bottom: 60px;
 	overflow: hidden;
 }
 table{
@@ -149,47 +182,37 @@ table{
 .bread-crumb li a{
 	display: block;
 }
-@media(min-width: 320px){
-	.gutter{
-
-	}
-}
 @media(min-width: 640px){
-	.gutter{
-
+	.body{
+		padding-bottom: 5px;
 	}
 }
-@media(min-width: 998px){
-	.gutter{
-
-	}
-
-}
-@media(min-width: 1024px){
-	.gutter{
-		width: 1000px;
+@media(min-width: 1054px){
+	.body{
+		padding-bottom: 60px;
 	}
 }
 
 /*------------    Foot    ------------*/
 .foot{
 	clear: both;
+	overflow: hidden;
 }
 .foot-top{
-	height: 66px;line-height: 80px;
+	height: 42px;
+	padding-top: 24px;
 	background: #d4d4d4;text-align: center;
 }
 .foot-top .gutter{
-	
+	font-family: "wHYGothic_A1_200";
 	color: #363636;
-	font-size:24px;font-family: "wHYGothic_A1_850";
 }
 .foot-top .gutter strong:first-child + strong{
-	color:#ec583a;font-size:24px;font-family: "wHYGothic_A1_550";
+	color:#ec583a;font-family: "wHYGothic_A1_550";
 }
 
 .foot-body{
-	padding: 66px 0 112px;
+	padding: 45px 15px 60px;
 	overflow: hidden;
 	background: #606060;
 }
@@ -199,25 +222,50 @@ table{
 }
 
 .foot .menu-box{
-	width: 478px;float: left;
+	float: left;
 	overflow: hidden;
-}
-.foot .location{
-	float: right;
 }
 .foot .menu-box ul{
 	float: left;
 	overflow: hidden;
 }
+.foot-menu-01{
+	margin-right: 52px;
+}
+.foot-menu-02{
+	margin-right: 36px;
+}
 .foot .dep1-row{
-	float: none;
+	clear: left;
 }
 .foot .dep1{
-	color: #fff;
-	text-align: left;
+	padding: 0;
+	color: #fff;text-align: left;
+}
+.foot .dep2-group{
+	padding: 10px 0px 23px;
 }
 .foot .dep2{
 	text-align: left;
+	padding: 6px 0;
+}
+
+.foot .location h4{
+	position: relative;
+	font-size: 22px;font-family: 'wHYGothic_A1_800';color: #fff
+
+}
+.foot .location h4 span{
+	position: absolute;
+	width:43px;height:2px;
+	background: url(../img/main/ir_icon.png) no-repeat 0px 0px
+}
+.foot .location p{
+	margin-top: 15px;
+	font-size: 14px;font-family: 'wHYGothic_A1_400';color: #fff;line-height: 1.4;
+}
+.foot .location img{
+	display: block;
 }
 .foot-tail{
 	text-align: center;
@@ -226,14 +274,65 @@ table{
 .copyright{
 	font-size: 14px;font-family: 'wHYGothic_A1_150';color: #454545
 }
-@media(min-width: 998px){
+@media(min-width: 640px){
 	.foot .gutter{
-		width: 960px;
+		width: 100%;
 	}
-
+	.foot-top .gutter{
+		font-size:20px;
+	}
+	.foot .location{
+		float: none;
+		margin-top: 6px;
+		text-align: center;
+	}
+	.foot .location h4 span{
+		right: 50%;top: -5px;margin-right: -21px;
+	}
+	.foot .location img{
+		margin: 20px auto 0;
+	}
 }
-@media(min-width: 1024px){
+@media(min-width: 998px){
+	.foot .location img{
+		margin-top: 15px;
+	}
+	.foot-top .gutter{
+		font-size:24px;
+	}
+	.foot .location{
+		float: right;
+		margin-top: 6px;
+		text-align: right;
+	}
+	.foot .location h4 span{
+		right: 0;top: -5px;
+		margin-right: 0;
+	}
+	.foot .location img{
+		margin: 15px 0 0 0;
+	}
+}
+@media(min-width: 1025px){
 	.foot .gutter{
-		width: 1000px;
+		width: 1024px;
+	}
+	.foot .location img{
+		margin-top: 15px;
+	}
+	.foot-top .gutter{
+		font-size:24px;
+	}
+	.foot .location{
+		float: right;
+		margin-top: 6px;
+		text-align: right;
+	}
+	.foot .location h4 span{
+		right: 0;top: -5px;
+		margin-right: 0;
+	}
+	.foot .location img{
+		margin: 15px 0 0 0;
 	}
 }
