--- a/css/index.css
+++ b/css/index.css
@@ -8,42 +8,28 @@
 .slide-addit{
 	position: absolute;
 	bottom: 0;right: 0;
-	width: 462px;
+	overflow: hidden;
 }
-.slide-row img{width: 100%;}
 .ctrl-box{
-	width: 100%;height: 68px;
+	width: 100%;
 	background: #e50012;
-	line-height: 64px;text-align: right;
+	text-align: right;
 }
 .ctrl-box button{
-	margin-left: 30px; 
 	border: 0 none;padding: 0;
 	background: url(../img/main/ir_icon.png) no-repeat;
 	text-indent: -9999px;
 }
-.ctrl-box .slide-ctrl-prev{
-	width:40px;height:40px;
-	background-position:-200px -60px;
-}
-.ctrl-box .slide-ctrl-play{
-	width:40px;height:40px;
-	background-position:-150px -60px;
-}
-.ctrl-box .slide-ctrl-next{
-	width:40px;height:40px;
-	margin-right: 25px;
-	background-position:-250px -60px;
-}
+
 .text-box{
 	overflow: hidden;
-	padding: 32px 26px;
 	background: #828282;color: #fff;
 }
 .text-box dl:first-child dt{
-	width: 200px;height: 105px;
-	background: url(../img/main/slide_tit_text_01.png) no-repeat left top;
-	text-indent: -9999px;
+	font-family: 'wHYGothic_A1_250';font-size: 32px;color: #fff;
+}
+.text-box dl:first-child dt span{
+	font-family: 'wHYGothic_A1_880';font-size: 32px;color: #fff;
 }
 .text-box dd{
 	margin-top: 14px;
@@ -53,40 +39,137 @@
 	text-align: left;
 	font-family: 'wHYGothic_A1_200';font-size: 16px;color: #fff;
 }
-.text-box dd .go-link{
-	display: block;float: right;
-	margin-top: 16px;
+.text-box .link-box{
+	display: block;
 	width:31px;height:31px;
 	background: url(../img/main/ir_icon.png) no-repeat;
 	background-position:-50px 0;text-indent: -8888px;
+}
+@media(min-width: 320px){
+
+}
+@media(min-width: 640px){	
+	.slide-addit{
+		width: 100%;
+
+	}
+	.ctrl-box{
+		float: left;
+		width: 37%;height: 30px;padding-top: 3px;
+		text-align: center;
+	}
+	.text-box{
+		float: right;
+		width: 63%;height: 33px;
+	}
+	.ctrl-box button{
+		margin-left: 0px; 
+		width:22px;height:22px;
+	}
+	.ctrl-box .slide-ctrl-prev{
+		background-position:-240px -60px
+	}
+	.ctrl-box .slide-ctrl-play{
+		margin: 0 40px;
+		background-position:-20px -10px;
+	}
+	.ctrl-box .slide-ctrl-next{
+		margin-right: 0px;
+		background-position:-240px -90px;
+	}
+	.text-box dl:first-child{
+		padding: 0px 40px 0 22px;
+	}
+	.text-box dl:first-child dt{
+		float: left;
+		margin-top: 3px;
+		font-size: 21px;color: #fff;
+	}
+	.text-box dl:first-child dt span{
+		font-size: 21px;color: #fff;
+	}
+	.text-box .link-box{
+		float: right;
+		margin-top: 7px;
+		width:20px;height:20px;
+		background-position:-120px -100px
+	}
+
+}
+@media(min-width: 1054px){
+	.slide-addit{
+		left: 50%;margin-left: 94px;
+		width: 378px;
+		/*height: 290px;*/
+	}
+	.ctrl-box{
+		float: none;
+		width: auto;
+		padding: 11px 0 0 0;
+		height: 45px;
+		text-align: right;
+	}
+	.text-box{
+		width: auto;height: auto;
+	}
+	.ctrl-box button{
+		width:33px;height:33px;
+	}
+	.ctrl-box .slide-ctrl-prev{
+		background-position:-160px -60px
+	}
+	.ctrl-box .slide-ctrl-play{
+		margin: 0px 24px;
+		background-position:-120px -60px;
+	}
+	.ctrl-box .slide-ctrl-next{
+		margin-right: 20px;
+		background-position:-200px -60px;
+	}
+	.text-box{
+		height: 190px;
+		padding: 42px 30px 0;
+	}
+	.text-box dl:first-child{
+		padding-top: 0px;
+		padding: 0;
+	}
+	.text-box dl:first-child dt{
+		float: none;
+		margin-top: 0px;
+		font-size: 32px;color: #fff;
+	}
+	.text-box dl:first-child dt span{
+		font-size: 32px;color: #fff;
+	}
+	.text-box .link-box{
+		float: right;
+		margin-top: 5px;
+		width:31px;height:31px;
+		background-position:-50px 0
+	}
 }
 .main .gutter{
 	text-align: left;
 }
 .content-head ul li{
 	height: 570px;
-	background: url(../img/main/bg_top-fs8.png) no-repeat center center;
+	background: url(../img/main/bg_main-fs8.png) no-repeat center center;
 }
 /*------------    feature    ------------*/
 .arr-down{
-	display: block;
-	margin: -78px auto 0;
+	position: absolute;left: 50%;top: 38px;
+	display: block;margin-left: -18px;
 	background: url(../img/main/ir_icon.png) no-repeat -150px -110px;
 	width:27px;height:19px;
 }
+
 .feat{
-	padding: 115px 0 48px;
+	position: relative;
 	overflow: hidden;
-}
-.feat dl{
-	float: left;
-	width: 33%;
-	min-width: 240px;
-	padding-top: 250px
 }
 .feat dt,
 .feat dd{
-	padding: 0 10px;
 	color: #5c5c5c;
 }
 .feat dt{
@@ -94,27 +177,87 @@
 	font-family: 'wHYGothic_A1_600';font-size: 20px;
 }
 .feat dd{
-	margin: 15px auto 0;
-	padding: 0 43px ;
+	
 	font-family: 'wHYGothic_A1_300';font-size: 14px;
 }
-.feat-01 dt{
-	padding: 0px 30px;
-}
+
 .feat-01{
-	background: url(../img/main/feat_01-fs8.png) no-repeat center top;
+	background: url(../img/main/feat_01-fs8.png) no-repeat;
 }
 .feat-02{
-	background: url(../img/main/feat_02-fs8.png) no-repeat center top;
+	background: url(../img/main/feat_02-fs8.png) no-repeat;
 }
 .feat-03{
-	background: url(../img/main/feat_03-fs8.png) no-repeat center top;
+	background: url(../img/main/feat_03-fs8.png) no-repeat;
+}
+@media(min-width: 640px){
+	.feat{
+		padding: 115px 0 0px;
+		height: 193px;
+	}
+	.feat dl{
+		position: absolute;left: 100%;top: 76px;
+		float: none;
+		width: auto;min-height: 195px;
+		text-align: left;
+	}
+	.feat .feat-01{
+		left: 0;
+	}
+	.feat dd,
+	.feat dt{
+		padding: 0 0 0 260px;
+	}
+	.feat dt{
+		margin: 35px 0 0 0 ;
+		height: auto;
+	}
+	.feat dd{
+		margin: 22px 0 0;
+	}
+	.feat-01,
+	.feat-02,
+	.feat-03{
+		background-position: 44px top;
+	}
+}
+@media(min-width: 1054px){
+	.feat{
+		padding: 115px 0 48px;
+	}
+
+	.feat dl{
+		position: static;
+		float: left;
+		width: 33%;
+		min-width: 240px;
+		padding: 250px 0 0 0;
+		text-align: center;
+	}
+	.feat dd,
+	.feat dt{
+		padding: 0 10px;
+	}
+	.feat dt{
+		height: 53px;margin: 0px auto;
+	}
+	.feat dd{
+		margin: 15px auto 0;
+		padding: 0 43px ;
+	}
+	.feat-01 dt{
+		padding: 0px 40px;
+	}
+	.feat-01,
+	.feat-02,
+	.feat-03{
+		background-position: center top;
+	}
 }
 
 /*------------    focus    ------------*/
 .focus-box{
-	float: left;position: relative;
-	width: 50%;overflow: hidden;height: 270px;
+	overflow: hidden;
 	background: #efefef;
 }
 .focus-box-in{
@@ -129,6 +272,7 @@
 
 .focus-box ul{
 	float: right;
+	margin-top: 8px;
 }
 .focus-box li{
 	display: inline-block;
@@ -139,7 +283,7 @@
 }
 .focus-box li a{
 	display: block;
-	font-size: 12px;color: #626262;
+	font-size: 10px;color: #626262;
 }
 .focus-box li a.current{
 	color: #ec583a
@@ -157,19 +301,33 @@
 	margin-top: 20px;
 	font-family: 'wHYGothic_A1_300';font-size: 14px;color: #626262;
 }
+@media(min-width: 640px){
+	.focus-box{
+		float: none;position: relative;
+		width: 100%;height: 270px;
+	}
+	.focus-box h5{
+		font-size: 20px;
+	}
+}
+@media(min-width: 1054px){
+	.focus-box{
+		float: left;position: relative;
+		width: 50%;height: 270px;
+	}
+	.focus-box h5{
+		font-size: 18px;
+	}
+}
 
 /*------------    Business    ------------*/
-.conts-col-2{
-	float: left;
-	width: 50%;
-}
+
 .biz-box, 
 .download-box{
 	float: left;
 	width: 50%;height: 112px;
 }
 .box-in{
-	padding: 20px 24px 0;
 	text-align: left;
 }
 .biz-box{
@@ -180,7 +338,7 @@
 	font-family: 'wHYGothic_A1_700';font-size: 18px;color: #d3d3d3;font-weight: normal;
 }
 .biz-box span{
-	display: inline-block;
+	display: block;
 	font-family: 'wHYGothic_A1_450';font-size: 14px;font-weight: normal;
 }
 .biz-box h5 + span{
@@ -192,8 +350,8 @@
 	background: url(../img/main/ir_icon.png)no-repeat;
 }
 .email{
-	margin-top: 12px;height:20px;
-	background-position:0 -147px;
+	margin-top: 12px;width: 12px;height:20px;
+	background-position:-240px -126px;
 }
 .email a{
 	display: block;
@@ -202,36 +360,49 @@
 	font-size: 16px;font-family: 'wHYGothic_A1_450';
 }
 .tel{
-	margin-top: 5px;height:20px;
-	background-position:0px -170px;text-decoration: underline;
+	margin-top: 5px;height:18px;width: 19px;
+	background-position:-240px -150px;text-decoration: underline;
 	font-size: 16px;font-family: 'wHYGothic_A1_450';color: #fff;
 }
 .notice-box{
 	clear: left;
 	width: 100%;
 }
-
+@media(min-width: 640px){
+	.conts-col-2{
+		float: none;
+		width: 100%;
+	}
+	.box-in{
+		padding: 16px 39px 0;
+	}
+}
+@media(min-width: 1054px){
+	.conts-col-2{
+		float: left;
+		width: 50%;
+	}
+	.box-in{
+		padding: 20px 24px 0;
+	}
+}
 /*------------    Download    ------------*/
 .download-box{
 	position: relative;
 	background: #ebebeb;
 }
-.download-box h5,
-.download-box h5 span{
+.download-box *{
 	font-size: 18px;font-weight: normal;
-	color: #5c5c5c;
 }
 .download-box h5{
 	font-family: 'wHYGothic_A1_700';
 }
 .download-box h5 span{
 	font-family: 'wHYGothic_A1_450';
-	color: #5c5c5c;
 }
 .download-box h5 + span{
 	display: block;
-	margin-top: 14px;
-	font-family: 'wHYGothic_A1_400';font-size: 16px;color: #5c5c5c;
+	font-family: 'wHYGothic_A1_400';font-size: 16px;
 	line-height: 1.4;
 }
 .download-box a{
@@ -240,12 +411,39 @@
 	background: url(../img/main/btn_download.png) no-repeat left top;
 	width: 75px;height: 74px;text-indent: -8888px;
 }
+@media(min-width: 640px){
+	.download-box{
+		background: #ec583a;
+	}
+	.download-box *{
+		color: #fff;
+	}
+	.download-box a{
+		background: url(../img/main/btn_download_640.png) no-repeat left top;
+	}
+	.download-box h5 + span{
+		margin-top: 10px;
+	}
+}
+@media(min-width: 1054px){
+	.download-box{
+		background: #ebebeb;
+	}
+	.download-box *{
+		color: #5c5c5c;
+	}
+	.download-box a{
+		background: url(../img/main/btn_download.png) no-repeat left top;
+	}
+	.download-box h5 + span{
+		margin-top: 14px;
+	}
+}
 
 
 /*------------    News    ------------*/
 .notice-box{
 	position: relative;
-	height: 158px;
 	background: #dcdcdc;
 }
 .notice-box h5{
@@ -290,31 +488,35 @@
 }
 .notice-box ul .date{
 	float: right;
-	margin-right: 14px;
 	font-size: 13px;font-family: 'wHYGothic_A1_350';color: #3f3f3f
 }
 .notice-box .link-more{
-	display: block;position: absolute;top: -34px;right: 14px;
+	display: block;position: absolute;
 	width:14px;height:14px;
 	background: url(../img/main/ir_icon.png)no-repeat;
 	background-position:0 -20px;
 	text-indent: -9999px;
 }
-
-.location .conts-in{
-	padding: 84px 60px;
-	overflow: hidden;float: left;
+@media(min-width: 640px){
+	.notice-box{
+		clear: both;
+		height: 158px;
+	}
+	.notice-box .link-more{
+		top: -34px;right: 39px;
+	}
+	.notice-box ul .date{
+		margin-right: 39px;
+	}
 }
-.location dl{
-	float: left;
-	padding-top: 6px;
-	width: 318px;
-	background: url(../img/main/ir_icon.png) no-repeat -30px -180px;
-}
-.location dt{
-	font-size: 32px;font-family: "wHYGothic_A1_800";color: #4e4e4e;
-}
-.location dd{
-	margin-top: 16px;
-	font-size: 16px;font-family: "wHYGothic_A1_400";color: #4e4e4e; 
+@media(min-width: 1054px){
+	.notice-box{
+		height: 158px;
+	}
+	.notice-box .link-more{
+		top: -34px;right: 14px;
+	}
+	.notice-box ul .date{
+		margin-right: 14px;
+	}
 }
