--- a/css/common.css
+++ b/css/common.css
@@ -18,6 +18,12 @@ body{
 	position: relative;z-index: 10;
 	
 }
+@media(min-width: 320px){
+	.head-top{
+		height: 43px;
+		padding: 20px 0 0 0;
+	}
+}
 @media(min-width: 640px){
 	.head-top{
 		height: 56px;
@@ -49,7 +55,7 @@ h1{
 .btn-book{
 	display: block;
 	float: right;
-	width:31px;height:31px;margin-top: 5px;
+	width:31px;height:31px;
 	background: url(../img/main/ir_icon.png) no-repeat -180px -100px;
 	text-indent: -9999px;
 	border: 0 none;
@@ -71,75 +77,144 @@ h1{
 	margin-right: 0;
 	background-position:-120px 0
 }
-.head .menu-box{
-	position: absolute;left: -1px;top: 32px;
-	width: 100%;overflow: hidden;
-}
 .gnb{
-	float: right;
 	overflow: hidden;
 }
-.menu-bg.active:after{
-	content: '';
-	position: absolute;
-	top: 56px;left: 0;bottom: 0;z-index: -1;
-	width: 100%;
-	background: #787776;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
-	filter: alpha(opacity=90);
-	-khtml-opacity: 0.9;
-	-moz-opacity: 0.9;
-	opacity: 0.9;
-}
 .dep1{
-	display: block;
-	padding: 10px 24px 24px;
-	text-align: center;
-	font-family: 'wHYGothic_A1_200';font-size: 18px;color: #3f3f3f;
+	font-family: 'wHYGothic_A1_200';
 }
-.dep1-row{
+.dep2{
+	font-family: 'wHYGothic_A1_300';
+}
+.dep1 span,
+.dep2 span,
+.dep2 cite{
+	display: inline-block;
+	float: right;
+	background: url(../img/main/ir_icon.png) no-repeat ;
+}
+.dep2 cite{
 	float: left;
-	text-align: center;
+	margin: 5px 8px 0 0;
+	width: 3px;height: 3px;
+	background-position:-250px -190px;
 }
-.dep2-group{
-	clear: both;
-	padding: 20px 0 52px;
-}
-.head .dep2-group:after{
-	content: "";
-	position: absolute;
-	top: 80px;bottom: 20px;
-	z-index: -1;
-	width: 181px;display: block;
-	border-left: 1px solid #908e8d;
-}
-.head .dep1-row:first-child .dep2-group:after{
-	border-left: 0 none;
-}
-a.dep2{
-	display: block;
-	padding: 8px 0px;
-	text-align: center;
-	font-family: 'wHYGothic_A1_300';font-size: 15px;color: #fff;
-}
-a.dep2:hover{
-	text-decoration: underline;
-}
-
 @media(min-width: 320px){
 	.gutter{
 		width: 100%
+	}
+	h1{
+		margin-left: 20px;
+		width:68px;height:29px;
+		background-position:-10px -160px
+	}
+	.btn-book{
+		margin-right: 30px;margin-top: 0px;
+		cursor: pointer;
+	}
+	.head .menu-box{
+		clear: both;
+		position: relative;
+		top: 16px;
+	}
+	.gnb{
+		float: none;position: absolute;width: 100%;
+	}
+	a.dep1{
+		display: block;
+		padding: 8px 0 8px 19px;
+		background: #757575;
+		border-bottom: 1px solid #999999;
+		font-size: 15px;color: #f6f6f6;
+	}
+	a.dep1:hover{
+		text-decoration: underline;
+	}
+	.dep1 .deco-plus{
+		margin:5px 34px 0 0;
+		width:8px;height:7px;
+		background-position:-250px -20px
+	}
+	.dep1 .deco-minus{
+		width:8px;height:1px;
+		margin: 10px 34px 0 0;
+		background-position:-260px 0
+	}
+	a.dep2{
+		display: block;
+		padding: 9px 0 7px 28px;
+		background: #3a3a3a;
+		border-top: 1px solid #707070;
+		font-size: 13px;color: #fff;
+	}
+	.dep2 span{
+		margin-right: 53px;
+		width:7px;height:10px;
+		background-position:-250px 0
+	}
+	.dep2-group li:first-child .dep2{
+		border-top: 0 none;
+	}
+	a.dep2:hover{
+		text-decoration: underline;
 	}
 }
 @media(min-width: 640px){
 	h1{
 		margin-left: 32px;
 		width:95px;height:41px;
-		background-position:-10px -120px
+		background-position:-10px -110px
 	}
 	.btn-book{
-		margin-right: 32px;
+		margin-right: 30px;margin-top: 5px;
 		cursor: pointer;
+	}
+	.head .menu-box{
+		clear: both;
+		position: relative;
+		top: 16px;
+	}
+	.gnb{
+		float: none;position: absolute;width: 100%;
+	}
+	a.dep1{
+		display: block;
+		padding: 8px 0 8px 24px;
+		background: #757575;
+		border-bottom: 1px solid #999999;
+		font-size: 15px;color: #f6f6f6;
+	}
+	a.dep1:hover{
+		text-decoration: underline;
+	}
+	
+	.dep1 .deco-plus{
+		margin:5px 34px 0 0;
+		width:8px;height:7px;
+		background-position:-250px -20px
+	}
+	.dep1 .deco-minus{
+		width:8px;height:1px;
+		margin: 10px 34px 0 0;
+		background-position:-260px 0
+	}
+	a.dep2{
+		display: block;
+		padding: 9px 0 7px 45px;
+		background: #3a3a3a;
+		border-top: 1px solid #707070;
+		font-size: 13px;color: #fff;
+	}
+	.dep2 span{
+		margin-right: 53px;
+		width:7px;height:10px;
+		background-position:-250px 0
+	}
+	.dep2-group li:first-child .dep2{
+		border-top: 0 none;
+	}
+	a.dep2:hover{
+		text-decoration: underline;
 	}
 }
 @media(min-width: 998px){
@@ -151,7 +226,67 @@ a.dep2:hover{
 		width:106px;height:46px;
 		background-position: -10px -60px;
 	}
-
+	.head .menu-box{
+		position: absolute;left: -1px;top: 32px;
+		width: 100%;overflow: hidden;
+	}
+	.gnb{
+		float: right;position: static;width: auto;
+	}
+	.menu-bg.active:after{
+		content: '';
+		position: absolute;
+		top: 56px;left: 0;bottom: 0;z-index: -1;
+		width: 100%;
+		background: #787776;
+		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+		filter: alpha(opacity=90);
+		-khtml-opacity: 0.9;
+		-moz-opacity: 0.9;
+		opacity: 0.9;
+	}
+	a.dep1{
+		display: block;
+		padding: 10px 24px 24px;
+		text-align: center;
+		background: none;border: 0 none;
+		font-size: 18px;color: #3f3f3f;
+	}
+	.dep1 span,
+	.dep2 span,
+	.mid-dot{
+		display: none;
+	}
+	.dep1-row{
+		float: left;
+		text-align: center;
+	}
+	.dep2-group{
+		clear: both;
+		padding: 20px 0 52px;
+	}
+	.head .dep2-group:after{
+		content: "";
+		position: absolute;
+		top: 80px;bottom: 20px;
+		z-index: -1;
+		width: 181px;display: block;
+		border-left: 1px solid #908e8d;
+	}
+	.head .dep1-row:first-child .dep2-group:after{
+		border-left: 0 none;
+	}
+	a.dep2{
+		display: block;
+		padding: 8px 0px;
+		text-align: center;
+		background: none;
+		border: 0 none;
+		font-size: 15px;color: #fff;
+	}
+	a.dep2:hover{
+		text-decoration: underline;
+	}
 }
 @media(min-width: 1054px){
 	.gutter{
