--- a/css/common.css
+++ b/css/common.css
@@ -52,6 +52,9 @@ h1{
 	background: url(../img/main/ir_icon.png) no-repeat -10px -60px;
 	text-indent: -9999px;
 }
+h1 a{
+	display: block;
+}
 .btn-book{
 	display: block;
 	float: right;
