--- a/css/prod.css
+++ b/css/prod.css
@@ -10,26 +10,120 @@
 .sm100 h3{
 	font-family: 'wHYGothic_A1_800';
 }
-.h3-comment{
+.sm100 .h3-comment{
 	font-family: 'wHYGothic_A1_400';
 }
-.content-row li{
+.sm100 .content-row li{
 	font-family: 'wHYGothic_A1_400';
 }
-@media(min-width: 320){
+.sm100 .content-row li h4{
+	font-family: 'wHYGothic_A1_800';
+}
+.sm100 .content-row li h4 span{
+	font-family: 'wHYGothic_A1_300';	
+}
+.sm100 .content-row{
+	overflow: hidden;
+}
+@media(min-width: 320px){
+	.sm100 .content-head{
+		height: 651px;
+		background: url(../img/prod/bg_head-fs8.png) repeat-x left top;
+		text-align: center;
+	}
 	.sm100 h2{
-		font-size: 57px;color: #626262;
+		padding-top: 92px;
+		font-size: 57px;color: #626262;font-weight: normal;line-height: 56px;
+	}
+	.sm100 .content-head ul{
+		background: #000;
+		margin-top: 32px;
+		height: 470px;
+		background: url(../img/prod/head_img-fs8.png) no-repeat center bottom;
 	}
 	.sm100 .content-head li{
-		font-size: 14px;color: #626262;
+		display: inline-block;
+		font-size: 14px;color: #626262;line-height: 24px;
+	}
+	.sm100 .content-row{
+		margin-top: 240px;
+	}
+	.sm100 .prod-deco-1{
+		display: block;
+		margin : 0 auto;
+		width: 173px;height: 3px;background: #3f3f3f;
 	}
 	.sm100 h3{
-		font-size: 40px;color: #3f3f3f;
+		margin-top: 50px;
+		font-size: 40px;color: #3f3f3f;line-height: 1.0;
 	}
 	.h3-comment{
+		display: inline-block;
+		margin-top: 16px;
 		font-size: 16px;color: #3f3f3f;
 	}
-	.content-row li{
-		font-size: 16px;line-height: 32px;color: #2f2f2f;
+	.sm100 .feats img{
+		float: left;
+	}
+	.sm100 .content-row.first-child img{
+		float: left;
+		display: block;
+		margin: 124px 30px 0 0;
+	}
+	.sm100 .content-row.first-child ul{
+		float: left;
+		color: #f00;
+		margin-top: 265px;
+	}
+	.sm100 .content-row.first-child li{
+		text-align: left;
+		list-style-type: square;
+		list-style-position: inside;
+	}
+	.sm100 .feats{
+		margin-top: 170px;
+	}
+	.sm100 .feats div{
+		float: right;
+		padding: 155px 0 0 18px;
+		width: 500px;
+		text-align: left;
+	}
+	.sm100 .content-row li h4{
+		font-size: 48px
+	}
+	.sm100 .content-row li h4 span{
+		display: block;
+		font-size: 26px;line-height: 36px;
+	}
+	.sm100 .content-row li .h4-comment{
+		display: block;
+		font-size: 16px;line-height: 1.4;
+	}
+	.sm100 .feats div.feat-comment{
+		clear: both;float: none;
+		padding: 0;
+		padding-top: 48px;
+		width: auto;
+	}
+	.feat-comment span{
+		display: block;
+		font-size: 16px;line-height: 20px;
+	}
+	.feat-comment span:first-child{
+		font-size: 20px;
+	}
+	.feat-comment span:first-child + span{
+		margin-top: 10px;
+	}
+	.sm100 .feats li{
+		clear: both;
+		margin-top: 122px;overflow: hidden;
+	}
+	.sm100 .feats .h4-comment li{
+		margin-top: 0;
+	}
+	.sm100 .specs img{
+		margin-top: 104px;
 	}
 }
